--- a/style.css
+++ b/style.css
@@ -90,13 +90,22 @@ table.puzzleContainer {
 td.cell  {
 	border: 2px solid #3D5A80;
 	padding: 0;
-	cursor: context-menu;
+	cursor: not-allowed;
 }
 
 td.emptyCell {
 	border: 2px solid #3D5A80;
 	padding: 0;
 	cursor: pointer;
+	background-color: azure;
+}
+
+td:hover {
+	background-color:#f2e5ee;
+}
+
+td.selected {
+	background-color:#ffbce2;
 }
 
 #r0-c2, #r0-c5, #r1-c2, #r1-c5, #r2-c5,
